resolved footer issue that caused it to overlap a repo link

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -6,10 +6,8 @@
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    height: 80px; 
-    /* background-color: #010101; Example background color */
+    height: 20px; 
     padding: 20px;
-    /* opacity: 5%; */
     margin-top: 10px;
     color: black;
   }
