--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -8,7 +8,7 @@
   box-shadow: 0 5px 10px rgba(242, 244, 243, 0.471);
   padding: 5px;
   margin: 20px;
-  margin-bottom: 100px;
+  /* margin-bottom: 100px; */
   width:300px;
 }
  
